# PointCloudProcessor

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README.txt  run_pcd_colorization.sh
PointCloudProcessor/: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_command_record.txt
PointCloudProcessor/cmake/: FindIridescence.cmake
PointCloudProcessor/doc/: docker.md  pipeline.drawio
PointCloudProcessor/docker/: Dockerfile_origin
PointCloudProcessor/include/: FrameData.hpp  PointCloudProcessor.hpp  RGBCloud.hpp  cloudSmooth.hpp
PointCloudProcessor/include/vlcal/: initial_guess_manual.hpp
PointCloudProcessor/include/vlcal/calib/: view_culling.hpp
PointCloudProcessor/include/vlcal/common/: visual_lidar_data.hpp
PointCloudProcessor/scripts/: EDT.ipynb  evalSkeletonDirection.py  genNormAndDistanceMask.ipynb  genNormAndDistanceMask.py  gen_reconstruct_pose_plots.py  image_color_balance_autonomous.py  make_vo_odom_for_fastlio.py  math_tools.py  pose_interp.py
PointCloudProcessor/src/: PointCloudProcessor.cpp  calibrate.cpp  cloudSmooth.cpp  extractMaskImg.py  main.cpp
PointCloudProcessor/src/vlcal/calib/: view_culling.cpp
PointCloudProcessor/src/vlcal/common/: visual_lidar_data.cpp
doc/docker/: docker.md
include/: FrameData.hpp  PointCloudProcessor.hpp  RGBFrames.hpp  cloudSmooth.hpp
include/vlcal/: initial_guess_manual.hpp
include/vlcal/calib/: view_culling.hpp  visual_camera_calibration.hpp
include/vlcal/common/: estimate_fov.hpp  frame_cpu.hpp
include/vlcal/cost/: nid_cost.hpp
include/vlcal/costs/: nid_cost.hpp
scripts/: computeNidForCloudAndImage.py  image_color_balance.py  image_color_balance_autonomous.py
src/: FrameData.cpp  PointCloudProcessor.cpp  RGBFrames.cpp  calibrate.cpp  cloudSmooth.cpp  initial_guess_manual.cpp  main.cpp
src/camera/: create_camera.cpp
src/vlcal/: pointColorization.cpp
src/vlcal/calib/: view_culling.cpp  visual_camera_calibration.cpp
src/vlcal/common/: estimate_fov.cpp  frame_cpu.cpp  visual_lidar_data.cpp
